--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "sample",
+  "name": "shopping-cart",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongodb": "^5.1.0",
+    "morgan": "~1.9.1",
+    "razorpay": "^2.8.6"
   }
 }
